# aurora

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  MCP-ASSISTANT-RULES.md  README.md  alembic.ini  chains.yaml  conftest.py  docker-compose.yml  providers.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 77e46e2d0509_add_validators_table_for_registry_.py  7eee474ed2dc_add_deleted_at_fields_to_partners_and_.py  8ea71cd7ef5d_add_canonical_stake_events_table_for_.py  a671d61b60ff_add_validator_name_to_sample_validator_.py  af2383dc7482_add_partner_wallets_table_for_wallet_.py  b4ac4c9c08d6_add_sample_data_tables_for_commission_.py  cec3a80e61a4_initial_migration_all_orm_models.py  dff453762595_add_users_table_for_authentication.py  f215cd43bb25_add_wallet_attribution_fields_to_.py  fdc94691839a_add_canonical_staker_rewards_detail_.py
claudedocs/: implementation-summary-issues-11-12.md
config/: providers.yaml
docs/: api-specification.md  database-schema.md  design-summary.md  github-issues-plan.md  migration-guide.md  mvp-implementation-order.md  mvp-plan.md  rbac_policy.md  system-architecture.md
docs/ai-context/: HANDOFF.md  ISSUE_29_PROGRESS.md  data-seeding-context.md  docs-overview.md  phase-1-findings.md  project-structure.md
docs/specs/: milestone-sample-data-seeding.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/config/: chains.yaml
frontend/src/: App.tsx
frontend/src/components/: AgreementWizard.tsx  AppLayout.tsx  BulkUploadWalletsDialog.tsx  CommissionResults.tsx  DeleteWalletDialog.tsx  EditWalletDialog.tsx  PartnerForm.tsx  PrivateRoute.tsx  ValidatorForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useDashboardData.ts  usePartnerWallets.ts
frontend/src/pages/: AgreementsPage.tsx  CONTEXT.md  CommissionsPage.tsx  DashboardPage.tsx  LoginPage.tsx  PartnerWalletsPage.tsx  PartnersPage.tsx  SampleCommissionsPage.tsx  ValidatorsPage.tsx
frontend/src/services/: agreements.ts  api.ts  commissions.ts  partnerWallets.ts  partners.ts  sampleCommissions.ts  validators.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: csvTemplate.ts  walletValidation.ts
scripts/: analyze_wallet_distribution.py  create_admin_user.py  migrate.sh  run_server.sh  seed_globalstake_sample.py  seed_mvp_data.py  sync_validators_from_pnl.py  test_commission_calculator.py
src/: main.py
src/adapters/: __init__.py  base.py  exceptions.py  factory.py
src/adapters/solana/: __init__.py  jito.py  solana_beach.py
src/api/: CONTEXT.md  __init__.py  auth.py  dependencies.py
src/api/routers/: CONTEXT.md  __init__.py  agreements.py  commissions.py  partner_wallets.py  partners.py  periods.py  sample_commissions.py  validators.py
src/api/schemas/: __init__.py  agreements.py  commissions.py  partner_wallets.py  partners.py  validators.py  validators_registry.py
src/aurora/: __init__.py
src/aurora/config/: __init__.py  chains.py  providers.py  settings.py
src/config/: __init__.py  chains.py  models.py  providers.py  settings.py
src/core/: logging.py  security.py
src/core/models/: __init__.py  base.py  canonical.py  chains.py  computation.py  sample_data.py  staging.py  users.py
src/core/services/: CONTEXT.md  __init__.py  agreements.py  commission_calculator.py  commissions.py  partner_wallets.py  partners.py  rewards_simulator.py  validators.py
src/db/: __init__.py  session.py
src/repositories/: __init__.py  agreements.py  base.py  partner_wallets.py  partners.py  stake_events.py  staker_rewards.py  validators.py
temp-data/: globalstake-sample.xlsx  partner1-wallets.csv  partner1-wallets.txt  partner2-wallets-sample.txt  partner2-wallets.csv  wallet-distribution.json
tests/: conftest.py
tests/fixtures/: jito_responses.json  solana_beach_responses.json
tests/unit/: test_adapters_base.py  test_adapters_factory.py  test_commission_calculator.py  test_jito_adapter.py  test_models_canonical.py  test_models_chains.py  test_models_computation.py  test_models_staging.py  test_rewards_simulator.py  test_solana_beach_adapter.py
(+6 files in other folders)
